--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <button class="btn btn-info">Contact</button>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/bg.png">
+                    <img src="img/atharva.png">
                 </div>
             </div>
         </div>
